--- a/src/app/pages/config/config.component.html
+++ b/src/app/pages/config/config.component.html
@@ -3,4 +3,7 @@
   <section class="board">
     <app-game-config />
   </section>
+  
+  <p class="message">{{ 'message.defaultInstructions' | transloco }}</p>
+
 </main>
