refactor(sonar): fix all TODO and refactor store and localstorage

--- a/src/app/components/config/game-config.component.html
+++ b/src/app/components/config/game-config.component.html
@@ -1,4 +1,4 @@
-@let chars = gameStore.hunter().chars;
+@let chars = gameStore.unlockedChars();
 
 <form [formGroup]="configForm" (ngSubmit)="submitForm()" class="config-form">
   <h2>{{ 'config.title' | transloco }}</h2>
