--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -21,6 +21,9 @@
       <button (click)="nagivateTo(ROUTES.RULES)">{{ 'menu.instructions' | transloco }}</button>
     </li>
     <li>
+      <button (click)="nagivateTo(ROUTES.CREDITS)">{{ 'menu.credits' | transloco }}</button>
+    </li>
+    <li>
       <button (click)="newGame()" class="newgame">{{ 'menu.newGame' | transloco }}</button>
     </li>
   </ul>
