--- a/src/app/pages/chars/characters.component.html
+++ b/src/app/pages/chars/characters.component.html
@@ -1,4 +1,4 @@
-@let onwedChars = gameStore.hunter().chars;
+@let onwedChars = gameStore.unlockedChars();
 
 <section class="prizes">
   <p class="title">{{ 'characters.selectYourPrize' | transloco }}</p>
